Fix widget edit display on mobile
WP automatically adds a "margin-left" when a specific widget width is
set. On mobile devices this makes editing the widget impossible.
We now check for mobile devices and do not provide a width if true.
Also fix margin via responsive CSS.

--- a/resources/css/advanced-sidebar-menu.css
+++ b/resources/css/advanced-sidebar-menu.css
@@ -24,6 +24,10 @@
 	.advanced-sidebar-menu-column {
 		width: 100%;
 	}
+
+	.advanced-sidebar-menu-column-right {
+		margin-left: 0;
+	}
 }
 
 /** Elementor specific styles **/
